
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 OCT 25a
  * in src/data.c
    - in read_data_file_binary_ascii() and write_data_file_binary_ascii(), added code to 
      read and write the averagedrates to the data file
      

2023 OCT 20b
  * in  model/thermo/_generic/thermo.c
    - in _ionizationpot(), added ionization energy for SMAP_H2P


2023 OCT 20a
  * in model/chem/_NH3_Plasma_34s/
    - fixed issues with the units of several reactions
    

2023 OCT 18a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_value_fluid(), fixed a bug for EdotJe post variable
    

2023 OCT 15a
  * in model/share/fluid_share.c
    - in find_Stnorm(), turned off the Qk limiter for TURBMODEL_SST1994
  * in model/chem/_NH3_Plasma_10s/bavafa2008.c
    - in find_dW_dx_bavafa2008(), turned off the implicit treatment of reactions 1-4
    

2023 OCT 13b
  * in model/fluid/_*/fluid_bdry.c
    - in update_bdry_back_pressure() and update_bdry_outflow_Mach(), now reads the pressure
      and Mach number from a given param instead of from the last properties at the bdry node 
  * in tools
    - deleted inletgeom.c
    

2023 OCT 13a
  * in model/chem/_NH3_Plasma_34s/Li2012.c
    - various modifications due to wrong units listed in Li's paper
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - in update_bdry_back_pressure() and update_bdry_outflow_Mach(), now reads the pressure
      and Mach number from a given param instead of from the last properties at the bdry node 
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_*_fluid(), made modifications so that the averagedrates are added to
      the post variables
      

2023 OCT 11b
  * in model/fluid/_*/fluid_source.c