@@ -5,9 +5,9 @@ CCFLAGSLOCAL = $(CFLAGSCFD) -I../../../lib/include -I../../../.
 
 ####### Files
 
-HEADERS =   chem.h bavafa2008.h 
-SOURCES =   chem.c bavafa2008.c 
-OBJECTS =   chem.o bavafa2008.o 
+HEADERS =   chem.h bavafa2008.h omprakas2023.h
+SOURCES =   chem.c bavafa2008.c omprakas2023.c
+OBJECTS =   chem.o bavafa2008.o omprakas2023.o
 TARGETS  = ../_chem.a
 
 
