@@ -282,3 +282,32 @@
         year={1995},
         publisher={IOP Publishing}
         }
+@article{pop:2012:li,
+        title={Numerical model of an Ar/NH3 atmospheric pressure direct current discharge in parallel plate geometry},
+        author={Li, Zhi and Zhao, Zhen and Li, Xuehui},
+        journal={Physics of Plasmas},
+        volume={19},
+        number={3},
+        year={2012},
+        publisher={AIP Publishing}
+        }
+@article{jpc:2015:truscott,
+        title={Microwave plasma-activated chemical vapor deposition of nitrogen-doped diamond. I. N2/H2 and NH3/H2 plasmas},
+        author={Truscott, Benjamin S and Kelly, Mark W and Potter, Katie J and Johnson, Mack and Ashfold, Michael NR and Mankelevich, Yuri A},
+        journal={The Journal of Physical Chemistry A},
+        volume={119},
+        number={52},
+        pages={12962--12976},
+        year={2015},
+        publisher={ACS Publications}
+        }
+@article{jpap:2007:arakoni,
+        title={H2 generation in Ar/NH3 microdischarges},
+        author={Arakoni, Ramesh A and Bhoj, Ananth N and Kushner, Mark J},
+        journal={Journal of Physics D: Applied Physics},
+        volume={40},
+        number={8},
+        pages={2476},
+        year={2007},
+        publisher={IOP Publishing}
+        }
